# KEngine

./: .gitignore  CMakeLists.txt  KEngine.sln  KEngine.vcxproj  KEngine.vcxproj.filters  KHeader.h  Window.h  main.cpp  shader.glsl
Controller/: LightController.h
Core/: KHeader.h  function.h  transform.h
Core/Camera/: Camera.h
Core/Controller/: LightController.h
Core/Light/: DirectionLight.h  Light.h  PointLight.h  SpotLight.h
Core/Material/: Material.h
Core/Matrix/: Mat3.h  Mat4.h  Quaternion.h
Core/Vector/: Color.h  Vec2.h  Vec3.h  Vec4.h
Render/: Renderer.h  Shader.h
res/: base.frag  base.vert  phong.frag  phong.vert  test.frag  test.vert
src/: KHeader.h  Log.h  Window.h  main.cpp
src/Controller/: CameraController.h  LightController.h
src/Core/: function.h  transform.h
src/Core/Camera/: Camera.h  FirstCamera.h  ThirdCamera.h
src/Core/Light/: DirectionLight.h  Light.h  PointLight.h  SpotLight.h
src/Core/Material/: Color.h  Material.h  Texture.h
src/Core/Matrix/: Mat3.h  Mat4.h  Quaternion.h
src/Core/Vector/: Vec2.h  Vec3.h  Vec4.h
src/Object/: Face.h  Maze.h  Object3D.h  Plane.h  Sphere.h
src/Render/: MazeRenderer.h  Renderer.h  Shader.h  TestRenderer.h
src/Render/Buffer/: BackBuffer.h  FrameBuffer.h  ShadowMap.h  TextureBuffer.h  UniformBlock.h  VertexArray.h  VertexBuffer.h
